--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,10 +16,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_10"
-            android:background="@android:color/holo_blue_light"
-            app:layout_constraintBottom_toBottomOf="@+id/et_shop_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_shop_name">
 
@@ -41,17 +39,17 @@
 
             <include
                 android:id="@+id/content_item"
-                layout="@layout/content_item"
+                layout="@layout/product_item_spinner"
                 android:layout_height="wrap_content"
-                android:layout_width="@dimen/size_300"
+                android:layout_width="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/et_location"
                 app:layout_constraintStart_toStartOf="@id/et_location"
                 android:layout_marginBottom="@dimen/size_10"
-                android:layout_marginStart="@dimen/size_20"/>
+                android:layout_marginTop="@dimen/size_10"/>
 
 
             <Button
-                android:id="@+id/btn_add_items"
+                android:id="@+id/btn_add_items_to_db"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/size_10"
@@ -61,7 +59,8 @@
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/content_item" />
+                app:layout_constraintTop_toBottomOf="@+id/content_item"
+                android:visibility="gone"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
